// Copyright 2021 Asylo authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package asylo;

// A message representing an SGX error code.
message SgxErrorCode {
  // A code of type sgx_status_t. The values of codes in that header are part of
  // the SGX SDK ABI, so they should remain relatively stable. Required.
  optional int32 sgx_status_code = 1;
}
